# home_server

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  index.html  set_password.sh  update_admin_pwd.sh  update_server.sh
credentials/: cred.json
pages/: discovery_page.html
src/: AdminCredentials.hpp  Bitset.hpp  Credentials.hpp  Database.cpp  Database.hpp  bitset_util.hpp  data_util.cpp  data_util.hpp  database_util.cpp  database_util.hpp  editor_util.cpp  editor_util.hpp  enum_names.hpp  git_util.cpp  git_util.hpp  main.cpp  string_split.hpp  string_view_stream.hpp  system_util.hpp  type_serialization.hpp  util.cpp  util.hpp
src/crow/: crow.h
src/diff_match_patch/: diff_match_patch.h
src/nlohmann/: json.hpp
templates/: drawdown.js  history.html  katex.js  lin_alg.js  line_drawing.js  main.html  math_jax.js  overview.html  qrcode.min.js  sha256.js  user.css  virtual_texture.js  virtual_textures.js
templates/editors/: gpx.html  invoice.html  md.html  md_default.css  mesh.html  tbl.html
templates/stl_viewer/: stl_viewer.min.js  webgl_detector.js
templates/tabs/: arbeitsplanung.html  data.html  einstellungen.html  stempeluhr.html
tests/: CMakeLists.txt  test_bitset.cpp  test_dataset.cpp  test_diff_match_patch.cpp  test_util.hpp  test_utils.cpp  utils.hpp
